--- a/views/partials/admin/sidebar.ejs
+++ b/views/partials/admin/sidebar.ejs
@@ -18,7 +18,7 @@
     <li><a href="/admin/category"
         class="font-medium <%=title=== 'Category-Management' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500' %>">Category
         Management</a></li>
-    <li><a href="#"
+    <li><a href="/admin/coupon"
         class="font-medium <%=title=== 'Coupon-Management' ?' text-yellow-500' :'text-gray-700 hover:text-yellow-500' %>">Coupon
         Management</a></li>
     <li>
